[tool.poetry]
name = "face-gen"
version = "0.1.0"
description = ""
authors = ["Ethan Brown <ethan.brown@yale.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
